--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     </head>
     <body>
         <div class="container">
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
-            <div class="container-item"></div>
+            <div class="container-item" id='0'></div>
+            <div class="container-item" id='1'></div>
+            <div class="container-item" id='2'></div>
+            <div class="container-item" id='3'></div>
+            <div class="container-item" id='4'></div>
+            <div class="container-item" id='5'></div>
+            <div class="container-item" id='6'></div>
+            <div class="container-item" id='7'></div>
+            <div class="container-item" id='8'></div>
+            <script src='script.js'></script>
         </div>
     </body>
 </html>
