--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="container-item" id='6'></div>
             <div class="container-item" id='7'></div>
             <div class="container-item" id='8'></div>
-            <script src='script.js'></script>
         </div>
+        <button id='play'>Play</button>
+        <script src='script.js'></script>
     </body>
 </html>
