--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <div class="container-item" id='7'></div>
             <div class="container-item" id='8'></div>
         </div>
+        <div class="score-board">
+            <div class="player-1">Player1: <span id='score1'>0</span></div>
+            <div class="player-2">Player2: <span id='score2'>0</span></div>
+        </div>
         <button id='play'>Play</button>
         <script src='script.js'></script>
     </body>
