--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tic-Tac-Toe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body style="background-color: rosybrown;">
         <div class="container">
             <div class="container-item" id='0'></div>
             <div class="container-item" id='1'></div>
@@ -16,11 +16,15 @@
             <div class="container-item" id='7'></div>
             <div class="container-item" id='8'></div>
         </div>
+        <div class='display-message'>
+            Hello friend!
+        </div>
         <div class="score-board">
             <div class="player-1">Player1: <span id='score1'>0</span></div>
             <div class="player-2">Player2: <span id='score2'>0</span></div>
         </div>
         <button id='play'>Play</button>
+        <button id='reset'>Reset Game</button>
         <script src='script.js'></script>
     </body>
 </html>
